[package]
name = "balanzierer"
version = "0.1.0"
edition = "2021"

[lib]
name = "balanzierer"
path = "src/lib.rs"

[[bin]]
name = "balanzierer-plugin"
path = "src/plugin/main.rs"

[[bin]]
name = "balanzierer-cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
tokio = { version="1", features = ['io-util', 'io-std','rt-multi-thread', 'rt', 'macros', 'sync'] }
log = { version = "0.4.14", features = ['std'] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
cln-plugin = { path = "./lightning/plugins" }
cln-rpc = { path = "./lightning/cln-rpc" }
predicates = "2.1.1"
assert_cmd = "2.0.4"
indicatif = "0.16.2"
console = "0.15.0"
